Huge updates! I added most of the functionality of checkouts using Stripe (maybe email confirmation needed

--- a/app/templates/charge.html
+++ b/app/templates/charge.html
@@ -1,4 +1,5 @@
 {% extends "template.html" %}
 {% block content %}
-  <h2>Thanks, you payed <strong>$5.00</strong>!</h2>
+  <h2>Thanks, successful transaction!</strong>!</h2>
+
 {% endblock %}
