--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -2,4 +2,39 @@
 
 {% block content %}
     <h2>Welcome! You are now logged in!</h2>
+    {% for p in products %}
+        <div class="row" align="center" style= "margin:10px;">
+        <div class="span3">
+        <img src="{{p.image}}">
+        <br><b>{{p.name}}</b>
+
+        <form action="/charge" method="post">
+<script src="https://checkout.stripe.com/v2/checkout.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
+
+  <button id="customButton" class="btn btn-primary">Buy Now</button>
+  <script>
+    $('#customButton').click(function(){
+      var token = function(res){
+        var $input = $('<input type=hidden name=stripeToken />').val(res.id);
+        $('form').append($input).submit();
+      };
+  StripeCheckout.open({
+        key:         'pk_test_czwzkTp2tactuLOEOqbMTRzG',
+        address:     true,
+        amount:      5000,
+        currency:    'usd',
+        name:        'GetAGrip',
+        description: 'Steering Wheel Cover',
+        panelLabel:  'Checkout',
+        token:       token
+      });
+      return false;
+    });
+  </script>
+  </form>
+<button class="btn-block" type="button">Add to Cart</button>
+</div>
+</div>
+{% endfor %}
 {% endblock %}
